--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,6 +5,11 @@
     "fr": "French",
     "es": "Spanish"
   },
+  "roles": {
+    "administrator": "Administrator",
+    "user": "Soldier",
+    "visitor": "Visitor"
+  },
   "login_page": {
     "welcome_soldier": "Welcome soldier!",
     "please_login": "Please log in via Discord to access the OrBat.",
