--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -23,6 +23,11 @@
       "logout": "Se déconnecter",
       "profile": "Mon profil",
       "settings": "Paramètres"
+    },
+    "links": {
+      "dashboard": "Tableau de bord",
+      "play": "Prochaines opérations",
+      "trainings": "Se former"
     }
   }
 }
