--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -3,6 +3,9 @@
   "dark_mode": "Modo oscuro",
   "light_mode": "Modo luz",
   "notifications": "Notificaciones",
+  "first_class": "Primera clase",
+  "soldiers": "Soldados",
+  "operations": "Operaciones",
   "languages": {
     "en": "Inglés",
     "fr": "Francés",
@@ -29,5 +32,38 @@
       "play": "Próximas operaciones",
       "trainings": "Formarse"
     }
+  },  "home": {
+  "visitor": {
+    "global": {
+      "title": "¡Bienvenido soldado!",
+      "about_to_join": "estás a punto de unirte a la 7ª Compañía",
+      "explanation": "Vas a tener que pasar por varios pasos antes de poder ser desplegado en nuestras operaciones. Vas a tener que ir más allá y demostrar que eres digno de llevar nuestros colores."
+    },
+    "stats": {
+      "title": "7E por los números"
+    },
+    "timeline": {
+      "title": "El viaje de un soldado",
+      "steps": [
+        {
+          "title": "Conectarse",
+          "description": "Primer paso: conectarse a OrBat. Si estás leyendo esto, ¡lo has conseguido!"
+        },
+        {
+          "title": "Únete a nuestro Discord",
+          "description": "Únete a nuestro servidor de Discord",
+          "here": "aquí"
+        },
+        {
+          "title": "Superar la formación inicial",
+          "description": "Ahora debes pasar tu entrenamiento inicial para poder convertirte en soldado"
+        },
+        {
+          "title": "Ser desplegado",
+          "description": "Si superas el entrenamiento inicial, tendrás la oportunidad de ser desplegado en nuestras numerosas misiones. Buena suerte soldado!"
+        }
+      ]
+    }
   }
+}
 }
