--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -66,5 +66,10 @@
         ]
       }
     }
+  },
+  "404": {
+    "title": "Nothing to see here",
+    "description": "The page you are trying to open does not exist. You may have mistyped the address, or the page has been moved to another URL. If you think this is a mistake, contact us on Discord.",
+    "back_to_home": "Take me back to home page"
   }
 }
